add local romanian and LICENSE

--- a/appengine/static/index.html
+++ b/appengine/static/index.html
@@ -89,6 +89,7 @@ func main() {
 	<li><a href="http://go-tour-he.appspot.com/">Hebreu &mdash; עִבְרִית</a></li>
 	<li><a href="http://go-tour-jp.appspot.com/">Japonès &mdash; 日本語</a></li>
 	<li><a href="http://go-tour-br.appspot.com/">Portuguès de Brasil &mdash; Português do Brasil</a></li>
+	<li><a href="http://go-tour-ro.appspot.com/">Romanès &mdash; Română</a></li>
 	<li><a href="http://go-tour-zh.appspot.com/">Xinès &mdash; 普通话</a></li>
 	</ul>
 	<p>
